--- a/uIkit/index.html
+++ b/uIkit/index.html
@@ -27,12 +27,40 @@
 <body>
     <section class="uk-container" style="width: 400px; padding: 16px 0 0;">
         <h3>例子</h3>
-        <div>
-          <img src="images/pic1.jpg" width="100" alt="" class="uk-align-left">
-          <p>人民政协网北京3月15日电（记者 李泽杰）国务院联防联控机制3月15日召开新闻发布会，介绍发挥再贷款再贴现政策作用支持疫情防控和复工复产工作情况。</p>
-          <p>人民银行货币政策司司长孙国峰回答记者提问时表示，随着利率市场化改革的推进和我国利率市场化程度的提高，在观察利率水平时，还要更加关注实际利率的变化。</p>
-          <p>近年来人民银行重点通过利率市场化改革的办法促进降低贷款实际利率。去年8月，按照国务院部署，人民银行推进贷款市场报价利率改革，也就是LPR改革，增强贷款市场的竞争性，疏通市场利率向贷款利率的传导，促使贷款实际利率明显下行，今年2月，一般贷款（不含个人住房贷款）利率为5.49%，比LPR改革前的2019年7月下降0.61个百分点，降幅明显超过同期1年期LPR0.26个百分点的降幅。</p>
-        </div>
+        <section class="uk-container">
+          <ul uk-accordion="multiple: true">
+            <li>
+              <a href="#" class="uk-accordion-title">四川省</a>
+              <div class="uk-accordion-content">
+                <ul class="uk-list">
+                  <li>四川省 - 绵阳</li>
+                  <li>四川省 - 南充</li>
+                  <li>四川省 - 广元</li>
+                </ul>
+              </div>
+            </li>
+            <li>
+              <a href="#" class="uk-accordion-title">北京市</a>
+              <div class="uk-accordion-content">
+                <ul class="uk-list">
+                  <li>北京市 - 绵阳</li>
+                  <li>北京市 - 南充</li>
+                  <li>北京市 - 广元</li>
+                </ul>
+              </div>
+            </li>
+            <li>
+              <a href="#" class="uk-accordion-title">上海市</a>
+              <div class="uk-accordion-content">
+                <ul class="uk-list">
+                  <li>上海市 - 绵阳</li>
+                  <li>上海市 - 南充</li>
+                  <li>上海市 - 广元</li>
+                </ul>
+              </div>
+            </li>
+          </ul>
+        </section>
     </section>
     <script src="../_assets/uikit-v3.2.2/js/uikit.min.js"></script>
     <script src="../_assets/uikit-v3.2.2/js/uikit-icons.min.js"></script>
