--- a/vue/example/index.html
+++ b/vue/example/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <div id="app">
-    <my-title text="{title}"></my-title>
+    <my-title :text="title"></my-title>
     <my-header></my-header>
   </div>
   <script>
